# api/server/restapi/operations/put_authorization_model_trace_trace_id_approve.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// PutAuthorizationModelTraceTraceIDApproveHandlerFunc turns a function with the right signature into a put authorization model trace trace ID approve handler
+type PutAuthorizationModelTraceTraceIDApproveHandlerFunc func(PutAuthorizationModelTraceTraceIDApproveParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PutAuthorizationModelTraceTraceIDApproveHandlerFunc) Handle(params PutAuthorizationModelTraceTraceIDApproveParams) middleware.Responder {
+	return fn(params)
+}
+
+// PutAuthorizationModelTraceTraceIDApproveHandler interface for that can handle valid put authorization model trace trace ID approve params
+type PutAuthorizationModelTraceTraceIDApproveHandler interface {
+	Handle(PutAuthorizationModelTraceTraceIDApproveParams) middleware.Responder
+}
+
+// NewPutAuthorizationModelTraceTraceIDApprove creates a new http.Handler for the put authorization model trace trace ID approve operation
+func NewPutAuthorizationModelTraceTraceIDApprove(ctx *middleware.Context, handler PutAuthorizationModelTraceTraceIDApproveHandler) *PutAuthorizationModelTraceTraceIDApprove {
+	return &PutAuthorizationModelTraceTraceIDApprove{Context: ctx, Handler: handler}
+}
+
+/* PutAuthorizationModelTraceTraceIDApprove swagger:route PUT /authorizationModel/trace/{traceID}/approve putAuthorizationModelTraceTraceIdApprove
+
+PutAuthorizationModelTraceTraceIDApprove put authorization model trace trace ID approve API
+
+*/
+type PutAuthorizationModelTraceTraceIDApprove struct {
+	Context *middleware.Context
+	Handler PutAuthorizationModelTraceTraceIDApproveHandler
+}
+
+func (o *PutAuthorizationModelTraceTraceIDApprove) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewPutAuthorizationModelTraceTraceIDApproveParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
