# api/server/restapi/operations/put_authorization_model_trace_trace_id_approve_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/apiclarity/apiclarity/api/server/models"
+)
+
+// PutAuthorizationModelTraceTraceIDApproveOKCode is the HTTP code returned for type PutAuthorizationModelTraceTraceIDApproveOK
+const PutAuthorizationModelTraceTraceIDApproveOKCode int = 200
+
+/*PutAuthorizationModelTraceTraceIDApproveOK Success
+
+swagger:response putAuthorizationModelTraceTraceIdApproveOK
+*/
+type PutAuthorizationModelTraceTraceIDApproveOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SuccessResponse `json:"body,omitempty"`
+}
+
+// NewPutAuthorizationModelTraceTraceIDApproveOK creates PutAuthorizationModelTraceTraceIDApproveOK with default headers values
+func NewPutAuthorizationModelTraceTraceIDApproveOK() *PutAuthorizationModelTraceTraceIDApproveOK {
+
+	return &PutAuthorizationModelTraceTraceIDApproveOK{}
+}
+
+// WithPayload adds the payload to the put authorization model trace trace Id approve o k response
+func (o *PutAuthorizationModelTraceTraceIDApproveOK) WithPayload(payload *models.SuccessResponse) *PutAuthorizationModelTraceTraceIDApproveOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put authorization model trace trace Id approve o k response
+func (o *PutAuthorizationModelTraceTraceIDApproveOK) SetPayload(payload *models.SuccessResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutAuthorizationModelTraceTraceIDApproveOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*PutAuthorizationModelTraceTraceIDApproveDefault unknown error
+
+swagger:response putAuthorizationModelTraceTraceIdApproveDefault
+*/
+type PutAuthorizationModelTraceTraceIDApproveDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIResponse `json:"body,omitempty"`
+}
+
+// NewPutAuthorizationModelTraceTraceIDApproveDefault creates PutAuthorizationModelTraceTraceIDApproveDefault with default headers values
+func NewPutAuthorizationModelTraceTraceIDApproveDefault(code int) *PutAuthorizationModelTraceTraceIDApproveDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PutAuthorizationModelTraceTraceIDApproveDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the put authorization model trace trace ID approve default response
+func (o *PutAuthorizationModelTraceTraceIDApproveDefault) WithStatusCode(code int) *PutAuthorizationModelTraceTraceIDApproveDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the put authorization model trace trace ID approve default response
+func (o *PutAuthorizationModelTraceTraceIDApproveDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the put authorization model trace trace ID approve default response
+func (o *PutAuthorizationModelTraceTraceIDApproveDefault) WithPayload(payload *models.APIResponse) *PutAuthorizationModelTraceTraceIDApproveDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put authorization model trace trace ID approve default response
+func (o *PutAuthorizationModelTraceTraceIDApproveDefault) SetPayload(payload *models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutAuthorizationModelTraceTraceIDApproveDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
