# api/server/restapi/operations/put_authorization_model_trace_trace_id_deny_urlbuilder.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"errors"
+	"net/url"
+	golangswaggerpaths "path"
+	"strings"
+
+	"github.com/go-openapi/swag"
+)
+
+// PutAuthorizationModelTraceTraceIDDenyURL generates an URL for the put authorization model trace trace ID deny operation
+type PutAuthorizationModelTraceTraceIDDenyURL struct {
+	TraceID int64
+
+	_basePath string
+	// avoid unkeyed usage
+	_ struct{}
+}
+
+// WithBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) WithBasePath(bp string) *PutAuthorizationModelTraceTraceIDDenyURL {
+	o.SetBasePath(bp)
+	return o
+}
+
+// SetBasePath sets the base path for this url builder, only required when it's different from the
+// base path specified in the swagger spec.
+// When the value of the base path is an empty string
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) SetBasePath(bp string) {
+	o._basePath = bp
+}
+
+// Build a url path and query string
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) Build() (*url.URL, error) {
+	var _result url.URL
+
+	var _path = "/authorizationModel/trace/{traceID}/deny"
+
+	traceID := swag.FormatInt64(o.TraceID)
+	if traceID != "" {
+		_path = strings.Replace(_path, "{traceID}", traceID, -1)
+	} else {
+		return nil, errors.New("traceId is required on PutAuthorizationModelTraceTraceIDDenyURL")
+	}
+
+	_basePath := o._basePath
+	if _basePath == "" {
+		_basePath = "/api"
+	}
+	_result.Path = golangswaggerpaths.Join(_basePath, _path)
+
+	return &_result, nil
+}
+
+// Must is a helper function to panic when the url builder returns an error
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) Must(u *url.URL, err error) *url.URL {
+	if err != nil {
+		panic(err)
+	}
+	if u == nil {
+		panic("url can't be nil")
+	}
+	return u
+}
+
+// String returns the string representation of the path with query string
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) String() string {
+	return o.Must(o.Build()).String()
+}
+
+// BuildFull builds a full url with scheme, host, path and query string
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) BuildFull(scheme, host string) (*url.URL, error) {
+	if scheme == "" {
+		return nil, errors.New("scheme is required for a full url on PutAuthorizationModelTraceTraceIDDenyURL")
+	}
+	if host == "" {
+		return nil, errors.New("host is required for a full url on PutAuthorizationModelTraceTraceIDDenyURL")
+	}
+
+	base, err := o.Build()
+	if err != nil {
+		return nil, err
+	}
+
+	base.Scheme = scheme
+	base.Host = host
+	return base, nil
+}
+
+// StringFull returns the string representation of a complete url
+func (o *PutAuthorizationModelTraceTraceIDDenyURL) StringFull(scheme, host string) string {
+	return o.Must(o.BuildFull(scheme, host)).String()
+}
